--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -48,10 +48,15 @@
 %  D.127.6. Numerical blabalysis}
 \klasyfikacja{
 TODO: dodać
+%I.4.8 Scene Analysis, Subject: Tracking
+%B.0 [Hardware]: General
+%B.4 [Hardware]: Input/Output & Data Communication 
+%H.4.m [Information Systems Applications]: Mis-
+%cellaneous
 }
 
 % S?owa kluczowe:
-\keywords{położenie, orientacja, 3D, ultradźwięki}
+\keywords{położenie, lokalizacja, orientacja, 3D, ultradźwięki}
 
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
