--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -167,9 +167,9 @@ Wartości $x^{ij}$ przekazywane są również z powrotem do modułu \textit{find
 
 \section{Kalibracja}
 
-Przed każdym uruchomieniem urządzenie wymagana kalibracji,
+Po każdym uruchomieniu urządzenie wymagana kalibracji,
 która sprowadza się do ustawienia nadajnika w odległości 2 metrów od odbiornika,
-uruchomienia programu \textit{save-pattern.py} oraz zaznaczenia  12 obszarów  będącym czołem odebranego sygnału.
+uruchomienia programu \textit{save-pattern.py} oraz zaznaczenia w nim 12 obszarów  będącym czołem odebranego sygnału.
 Obszary te wykorzystane zostaną jako \textit{wzorce} podczas mierzenia odległości.
 Program wyliczy także aktualną prędkość dźwięku, uwzględniając odległość nadajnika od odbiornika.
 
