--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -21,9 +21,10 @@ Zalety:
  
  \item Niski koszt komponentów.
 \end{itemize}
-
 Wady:
 \begin{itemize}
+ \item Duże gabaryty nadajnika i odbiornika.
+ 
  \item Duża czułość na zmiany temperatury. Jest to najpoważniejsza wada prezentowanego rozwiązania.
  Zauważmy, że zmiana temperatury otoczenia o \ang{1} powoduje zmianę prędkości dźwięku o 0,17\%,
  co przy rozdzielczości \SI{5000}{px} w skrajnych przypadkach daje przesunięcie \SI{7.5}{px}.
