--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -2,10 +2,10 @@
 
 \addcontentsline{toc}{chapter}{Bibliografia}
 
-  \bibitem{bib:soundSpeed}  Dean, E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, AUG 1979
+  \bibitem{bib:soundSpeed}  Dean E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
   \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
-  \bibitem{bib:stm32_usb_101} Marcin Peczarski, 
+  \bibitem{bib:stm32_usb_101} Peczarski M., 
   \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013,
   \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
 
@@ -92,5 +92,40 @@
   \textit{Kąty Eulera}. wikipedia
   \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
   
+  \bibitem{bib:gps}
+  Global Positioning System
+  \myurl{http://www.gps.gov/}
+  %http://www.gps.gov/technical/ps/2007-PPS-performance-standard.pdf
+  
+  \bibitem{bib:GLONASS}
+  GLONASS
+  \myurl{https://www.glonass-iac.ru/en/}
+
+  \bibitem{bib:galileo}
+  Galileo
+  \myurl{http://www.esa.int/Our_Activities/Navigation/The_future_-_Galileo/What_is_Galileo}
+
+  
+  \bibitem{bib:beacon}
+  Estimote Beacon
+  \myurl{http://developer.estimote.com/}
+  
+  \bibitem{bib:lokWiFi} Sapiezynski P., Stopczynski A., Gatej R., Lehmann S.,
+  \textit{Tracking Human Mobility using WiFi signals}, 
+  \myurl{http://arxiv.org/pdf/1505.06311v1}
+  
+  \bibitem{bib:metro} Hua J., Shen Z., Zhong S., 
+  \textit{We Can Track You If You Take the Metro: Tracking Metro Riders Using Accelerometers on Smartphones}, 
+  \myurl{http://arxiv.org/pdf/1505.05958v1.pdf}
+  
+  \bibitem{bib:PIRsens} Narayana S., Prasad R. V., Rao V. S., Prabhakar  T. V., Kowshik S. S., Iyer M. S.,
+  \textit{PIR Sensors: Characterization and Novel Localization Technique}, 
+  \myurl{http://www.es.ewi.tudelft.nl/papers/2015-VP-PIR.pdf}
+  
+  \bibitem{bib:chomiki} Markham A., Trigoni N., Ellwood S. A., Macdonald D. W.,
+  \textit{Revealing the hidden lives of underground animals using
+magneto-inductive tracking}, 
+  \myurl{https://www.cs.ox.ac.uk/files/3202/sensys2010b.pdf}
+
   
 \end{thebibliography}
