--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -52,7 +52,7 @@ urządzenia dodano zewnętrzną kamerę śledzącą pozycję głowy.
  do obiektu, którego położenie nas interesuje.
  Znając czasu oraz prędkości rozchodzenia się fal wyznaczane są odległości pomiędzy nadajnikami a obiektem.
  Na podstawie odległości wyznaczana jest ostatecznie lokalizacja przestrzenna obiektu. 
- Metoda ta jest powszechnie stosowana w systemach takich jak GPS \cite{bib:gps}, GLONASS \cite{bibGLONASS} czy Galileo \cite{bib:galileo}.
+ Metoda ta jest powszechnie stosowana w systemach takich jak GPS \cite{bib:gps}, GLONASS \cite{bib:GLONASS} czy Galileo \cite{bib:galileo}.
  Do zalet należy zaliczyć możliwe duże przestrzenie, na których lokalizowane są obiekty.
  Ze względy na dużą prędkość z jaką rozchodzą się fale elektromagnetyczne metoda ta cechuje się dość niską 
  dokładnością nieprzekraczającą \SI{10}{cm}.
