--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -2,14 +2,16 @@
 
 \addcontentsline{toc}{chapter}{Bibliografia}
 
-  \bibitem{bib:soundSpeed}  Dean E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
+  \bibitem{bib:soundSpeed}  Dean E. A., \textit{Atmospheric Effects on the Speed of Sound}, 
+  BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
   \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
   \bibitem{bib:stm32_usb_101} Peczarski M., 
-  \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013,
+  \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013
   \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
 
-  \bibitem{bib:FFT_correlation} Weisstein, Eric W. \textit{Cross-Correlation Theorem.} From MathWorld--A Wolfram Web Resource. 
+  \bibitem{bib:FFT_correlation} Weisstein E. W., 
+  \textit{Cross-Correlation Theorem.} From MathWorld--A Wolfram Web Resource 
   \myurl{http://mathworld.wolfram.com/Cross-CorrelationTheorem.html}
 
   \bibitem{bib:arduinoNano}  
@@ -20,76 +22,77 @@
   \textit{ULTRASONIC SENSOR (GENERAL), 40ST-12}
   \myurl{https://www.maritex.com.pl/media/uploads/PRODUKTY_PDF/sens/40str-12.pdf}
 
-  \bibitem{bib:stm32f4Discovery} Discovery kit for STM32F407/417 lines,
+  \bibitem{bib:stm32f4Discovery} Discovery kit for STM32F407/417 lines
   \myurl{http://www.st.com/web/catalog/tools/FM116/SC959/SS1532/PF252419}
 
   \bibitem{bib:stm32f407} datasheet: STM32F405xx, STM32F407xx 
   \myurl{http://www.st.com/st-web-ui/static/active/en/resource/technical/document/datasheet/DM00037051.pdf}
   
-  \bibitem{bib:wzm_ladunkowy} James Karki, \textit{Signal Conditioning Piezoelectric Sensors}, 
-  Application Report: SLOA033A - September 2000
+  \bibitem{bib:wzm_ladunkowy} Karki J., \textit{Signal Conditioning Piezoelectric Sensors}, 
+  Application Report: SLOA033A, wrzesień 2000
   \myurl{http://www.ti.com/lit/an/sloa033a/sloa033a.pdf}
 
   \bibitem{bib:ne5532} \textit{Dual low-noise operational amplifiers}. SLOS075I, november 1979, revised april 2009
   \myurl{http://www.ti.com/lit/ds/symlink/ne5532.pdf}
 
   \bibitem{bib:TLV2774} \textit{TLV277x, TLV277xA - Family of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown.}
-  SLOS209G - january 1998 - revised february 2004
+  SLOS209G, styczeń 1998 - luty 2004
   \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
   
   \bibitem{bib:LM78M05CDT} Texas Instruments, \textit{LM341/LM78MXX Series 3-Terminal Positive Voltage Regulators}
-  SNVS090E - MAY 2004 - REVISED AUGUST 2005
+  SNVS090E, maj 2004 - sierpień 2005
   \myurl{http://www.ti.com/lit/ds/symlink/lm341.pdf}
   
 
-  \bibitem{bib:atmega328} datasheet, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
-  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}
+  \bibitem{bib:atmega328} \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
+  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH},
   Atmel 2014
   \myurl{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P_datasheet_Complete.pdf}
 
-  \bibitem{bib:Arduino} \textit{Arduino Software}
-  Arduino
+  \bibitem{bib:Arduino} 
+  Arduino Software
   \myurl{https://www.arduino.cc/en/Main/Software}
 
-  \bibitem{bib:OculusRift}  Parth Rajesh Desai, Pooja Nikhil Desai, Komal Deepak Ajmera, Khushbu Mehta,
+  \bibitem{bib:OculusRift} Desai P. R., Desai P. N., Ajmera K. D., Mehta K.,
   \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
   \myurl{http://arxiv.org/pdf/1408.1173.pdf}
 
-  \bibitem{bib:OculusRiftDK2}  vrwiki,
-  \textit{Oculus Rift Development Kit 2}
+  \bibitem{bib:OculusRiftDK2}
+  Oculus Rift Development Kit 2
   \myurl{https://vrwiki.wikispaces.com/Oculus+Rift+Development+Kit+2}
   
-  \bibitem{bib:castAR} Technical Illusions,
-  \textit{Press Kit}
-  \myurl{http://technicalillusions.com/wp-content/uploads/2013/10/Press-Kit.pdf}
-
-  \bibitem{bib:MicrosoftKinect} Wenjun Zeng,
-  \textit{Microsoft Kinect Sensor and Its Effect}, Multimedia at Work
+  \bibitem{bib:castAR}
+  castAR
+  %http://technicalillusions.com/wp-content/uploads/2013/10/Press-Kit.pdf
+  \myurl{http://technicalillusions.com/}
+  
+  \bibitem{bib:MicrosoftKinect} Zeng W.,
+  \textit{Microsoft Kinect Sensor and Its Effect}, Multimedia at Work, grudzień 2012
   \myurl{http://research.microsoft.com/en-us/um/people/zhang/Papers/Microsoft\%20Kinect\%20Sensor\%20and\%20Its\%20Effect\%20-\%20IEEE\%20MM\%202012.pdf}
 
-  \bibitem{bib:VisualSFM} Changchang Wu,
+  \bibitem{bib:VisualSFM} Changchang W.,
   \textit{VisualSFM : A Visual Structure from Motion System}
   \myurl{http://ccwu.me/vsfm/}
 
-  \bibitem{bib:mouse}  Christian Banker, Michael Cretella, Jeff Dimaria, Jamie Mitchell, Jeff Tucker, 
+  \bibitem{bib:mouse} Banker C., Cretella M., Dimaria J., Mitchell J., Tucker J., 
   \textit{Ultrasonic 3D Wireless Computer Mouse}, 
-  Worcester Polytechnic Institute Electrical and Computer Engineering Department 
+  Worcester Polytechnic Institute Electrical and Computer Engineering Department, kwiecień 2007 
   \myurl{https://www.wpi.edu/Pubs/E-project/Available/E-project-042607-125024/unrestricted/magicmouse_2007-04-26.pdf}
 
   \bibitem{bib:pi3dscan}
-  \textit{The Pi 3D scanner project}
+  The Pi 3D scanner project
   \myurl{http://www.pi3dscan.com/}
 
   \bibitem{bib:powerGlove}
-  \textit{Power Glove}, wikipedia
+  Power Glove
   \myurl{https://en.wikipedia.org/wiki/Power_Glove}
 
   \bibitem{bib:powerGlove2}
-  \textit{Reach Out And Touch Your Data}, BYTE JULY 1990, IBM
+  \textit{Reach Out And Touch Your Data}, IBM, BYTE, lipiec 1990
   \myurl{http://research.microsoft.com/en-us/um/people/bibuxton/buxtoncollection/a/pdf/BYTE\%20Glove\%20Comparision.pdf}
 
   \bibitem{bib:katyEulera}
-  \textit{Kąty Eulera}. wikipedia
+  Kąty Eulera
   \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
   
   \bibitem{bib:gps}
@@ -111,20 +114,20 @@
   \myurl{http://developer.estimote.com/}
   
   \bibitem{bib:lokWiFi} Sapiezynski P., Stopczynski A., Gatej R., Lehmann S.,
-  \textit{Tracking Human Mobility using WiFi signals}, 
+  \textit{Tracking Human Mobility using WiFi signals} 
   \myurl{http://arxiv.org/pdf/1505.06311v1}
   
   \bibitem{bib:metro} Hua J., Shen Z., Zhong S., 
-  \textit{We Can Track You If You Take the Metro: Tracking Metro Riders Using Accelerometers on Smartphones}, 
+  \textit{We Can Track You If You Take the Metro: Tracking Metro Riders Using Accelerometers on Smartphones}
   \myurl{http://arxiv.org/pdf/1505.05958v1.pdf}
   
   \bibitem{bib:PIRsens} Narayana S., Prasad R. V., Rao V. S., Prabhakar  T. V., Kowshik S. S., Iyer M. S.,
-  \textit{PIR Sensors: Characterization and Novel Localization Technique}, 
+  \textit{PIR Sensors: Characterization and Novel Localization Technique}
   \myurl{http://www.es.ewi.tudelft.nl/papers/2015-VP-PIR.pdf}
   
   \bibitem{bib:chomiki} Markham A., Trigoni N., Ellwood S. A., Macdonald D. W.,
   \textit{Revealing the hidden lives of underground animals using
-magneto-inductive tracking}, 
+magneto-inductive tracking}
   \myurl{https://www.cs.ox.ac.uk/files/3202/sensys2010b.pdf}
 
   
