--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -22,20 +22,22 @@
   \textit{ULTRASONIC SENSOR (GENERAL), 40ST-12}
   \myurl{https://www.maritex.com.pl/media/uploads/PRODUKTY_PDF/sens/40str-12.pdf}
 
-  \bibitem{bib:stm32f4Discovery} Discovery kit for STM32F407/417 lines
-  \myurl{http://www.st.com/web/catalog/tools/FM116/SC959/SS1532/PF252419}
+  \bibitem{bib:stm32f4Discovery} UM1472 User manual, \textit{Discovery kit for STM32F407/417 lines}
+  \myurl{http://www.st.com/stm32}
 
-  \bibitem{bib:stm32f407} datasheet: STM32F405xx, STM32F407xx 
-  \myurl{http://www.st.com/st-web-ui/static/active/en/resource/technical/document/datasheet/DM00037051.pdf}
+  \bibitem{bib:stm32f407} RM0090 Reference manual,
+\textit{STM32F405/415, STM32F407/417, STM32F427/437 and
+STM32F429/439 advanced ARM®-based 32-bit MCUs}
+  \myurl{http://www.st.com/stm32}
   
   \bibitem{bib:wzm_ladunkowy} Karki J., \textit{Signal Conditioning Piezoelectric Sensors}, 
   Application Report: SLOA033A, wrzesień 2000
   \myurl{http://www.ti.com/lit/an/sloa033a/sloa033a.pdf}
 
-  \bibitem{bib:ne5532} \textit{Dual low-noise operational amplifiers}. SLOS075I, november 1979, revised april 2009
+  \bibitem{bib:ne5532}  Texas Instruments, \textit{Dual low-noise operational amplifiers}. SLOS075I, listopad 1979 - kwiecień 2009
   \myurl{http://www.ti.com/lit/ds/symlink/ne5532.pdf}
 
-  \bibitem{bib:TLV2774} \textit{TLV277x, TLV277xA - Family of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown.}
+  \bibitem{bib:TLV2774}  Texas Instruments, \textit{TLV277x, TLV277xA - Family of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown.}
   SLOS209G, styczeń 1998 - luty 2004
   \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
   
@@ -44,9 +46,8 @@
   \myurl{http://www.ti.com/lit/ds/symlink/lm341.pdf}
   
 
-  \bibitem{bib:atmega328} \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
-  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH},
-  Atmel 2014
+  \bibitem{bib:atmega328} Atmel, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
+  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}, 2014
   \myurl{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P_datasheet_Complete.pdf}
 
   \bibitem{bib:Arduino} 
@@ -126,8 +127,7 @@
   \myurl{http://www.es.ewi.tudelft.nl/papers/2015-VP-PIR.pdf}
   
   \bibitem{bib:chomiki} Markham A., Trigoni N., Ellwood S. A., Macdonald D. W.,
-  \textit{Revealing the hidden lives of underground animals using
-magneto-inductive tracking}
+  \textit{Revealing the hidden lives of underground animals using magneto-inductive tracking}
   \myurl{https://www.cs.ox.ac.uk/files/3202/sensys2010b.pdf}
 
   
